<resources>
    <string name="app_name">RustLab</string>
    <string name="btn_weapons">Weapons</string>
    <string name="btn_clothing">Clothing</string>
    <string name="btn_tools">Tools</string>
    <string name="btn_ammunition">Raid Chart</string>
    <string name="assault_rifle">Assault Rifle</string>
    <string name="durabilyty">durabilyty</string>
    <string name="resaurces">Resaurces</string>
    <string name="repair">Repair</string>
    <string name="recycle">Recycle</string>
    <string name="asaoultrifle">asaoultRifle</string>
    <string name="img">img</string>
    <string name="damage_50">Damage\t50</string>
    <string name="rate_of_fire_450_rpm">Rate of Fire\t450 RPM</string>
    <string name="capacity_30">Capacity\t30</string>
    <string name="reload_4_4_sec">Reload\t4.4 sec</string>
    <string name="draw_1_sec">Draw\t1 sec</string>
    <string name="damage_80">Damage\t80</string>
    <string name="rate_of_fire_35_rpm">Rate of Fire\t35 RPM</string>
    <string name="capacity_4">Capacity\t4</string>
    <string name="reload_5_sec">Reload\t5 sec</string>
    <string name="draw_1_secc">Draw\t1 sec</string>
    <string name="damage_50_100">Damage\t50–100</string>
    <string name="rate_of_fire_15_60_rpm">Rate of Fire\t15–60 RPM</string>
    <string name="capacity_1">Capacity\t1</string>
    <string name="reload_1_sec">Reload\t1 sec</string>
    <string name="draw_1_seca">Draw\t1 sec</string>
    <string name="damage_60">Damage\t60</string>
    <string name="rate_of_fire_17_rpm">Rate of Fire\t17 RPM</string>
    <string name="reload_3_6_sec">Reload\t3.6 sec</string>
    <string name="draw_1_6_sec">Draw\t1.6 sec</string>
    <string name="damage_30">Damage\t30</string>
    <string name="rate_of_fire_600_rpm">Rate of Fire\t600 RPM</string>
    <string name="capacity_24">Capacity\t24</string>
    <string name="reload_4_sec">Reload\t4 sec</string>
    <string name="damage_180">Damage\t180</string>
    <string name="rate_of_fire_120_rpm">Rate of Fire\t120 RPM</string>
    <string name="capacity_2">Capacity\t2</string>
    <string name="reload_5_5_sec">Reload\t5.5 sec</string>
    <string name="draw_1_75_sec">Draw\t1.75 sec</string>
    <string name="rate_of_fire_30_rpm">Rate of Fire\t30 RPM</string>
    <string name="reload_2_sec">Reload\t2 sec</string>
    <string name="draw_0_5_sec">Draw\t0.5 sec</string>
    <string name="damage_8">Damage\t8</string>
    <string name="rate_of_fire_240_rpm">Rate of Fire\t240 RPM</string>
    <string name="capacity_100">Capacity\t100</string>
    <string name="reload_3_5_sec">Reload\t3.5 sec</string>
    <string name="draw_1_8_sec">Draw\t1.8 sec</string>
    <string name="rate_of_fire_60_rpm">Rate of Fire\t60 RPM</string>
    <string name="rate_of_fire_23_rpm">Rate of Fire\t23 RPM</string>
    <string name="capacity_5">Capacity\t5</string>
    <string name="reload_3_sec">Reload\t3 sec</string>
    <string name="damage_40">Damage\t40</string>
    <string name="rate_of_fire_500_rpm">Rate of Fire\t500 RPM</string>
    <string name="draw_2_sec">Draw\t2 sec</string>
    <string name="damage_65">Damage\t65</string>
    <string name="rate_of_fire_500_rpm1">Rate of Fire\t500 RPM</string>
    <string name="capacity_1001">Capacity\t100</string>
    <string name="reload_7_5_sec">Reload\t7.5 sec</string>
    <string name="draw_1_8_sec1">Draw\t1.8 sec</string>
    <string name="damage_45">Damage\t45</string>
    <string name="rate_of_fire_400_rpm">Rate of Fire\t400 RPM</string>
    <string name="capacity_15">Capacity\t15</string>
    <string name="reload_2_2_sec">Reload\t2.2 sec</string>
    <string name="draw_0_5_sec1">Draw\t0.5 sec</string>
    <string name="projectile_10">Projectile\t10 %</string>
    <string name="bite_3">Bite\t3 %</string>
    <string name="projectile_25">Projectile\t25 %</string>
    <string name="cold_4">Cold\t-4 %</string>
    <string name="bite_8">Bite\t8 %</string>
    <string name="explosion_8">Explosion\t8 %</string>
    <string name="radiation_3">Radiation\t3 %</string>
    <string name="bite_33">Bite\t3 %</string>
    <string name="projectile_50">Projectile 50%</string>
    <string name="cold_8">Cold\t-8 %</string>
    <string name="melee_15">Melee\t15 %</string>
    <string name="bite_83">Bite\t8 %</string>
    <string name="projectile_35">Projectile\t35 %</string>
    <string name="melee_20">Melee\t20 %</string>
    <string name="cold_83">Cold\t8 %</string>
    <string name="melee_50">Melee\t50 %</string>
    <string name="explosion_83">Explosion\t8 %</string>
    <string name="melee_70">Melee\t70 %</string>
    <string name="explosion_81">Explosion\t8 %</string>
    <string name="radiation_5">Radiation\t5 %</string>
    <string name="projectile_20">Projectile\t20 %</string>
    <string name="bite_6">Bite\t6 %</string>
    <string name="radiation_51">Radiation\t5 %</string>
    <string name="projectile_5">Projectile\t5 %</string>
    <string name="bite_2">Bite\t2 %</string>
    <string name="radiation_4">Radiation\t4 %</string>
    <string name="cold_5">Cold\t5 %</string>
    <string name="melee_5">Melee\t5 %</string>
    <string name="melee_25">Melee\t25 %</string>
    <string name="bite_10">Bite\t10 %</string>
    <string name="cold_7">Cold\t7 %</string>
    <string name="radiation_2">Radiation\t2 %</string>
    <string name="projectile_15">Projectile\t15 %</string>
    <string name="radiation_50">Radiation\t50 %</string>
    <string name="melee_30">Melee\t30 %</string>
    <string name="projectile_30">Projectile\t30 %</string>
    <string name="melee_40">Melee\t40 %</string>
    <string name="bite_5">Bite\t5 %</string>
    <string name="explosion_5">Explosion\t5 %</string>
    <string name="rad" />
    <string name="cold_17">Cold 17 %</string>
    <string name="attack_speed_40_hpm">Attack Speed\t40 HPM</string>
    <string name="range_1_5_m">Range\t1.5 m</string>
    <string name="throw_yes">Throw\tYes</string>
    <string name="damage_25">Damage\t25</string>
    <string name="attack_speed_67_hpm">Attack Speed\t67 HPM</string>
    <string name="damage_17">Damage\t17</string>
    <string name="attack_speed_300_hpm">Attack Speed\t300 HPM</string>
    <string name="range_1_25_m">Range\t1.25 m</string>
    <string name="attack_speed_46_hpm">Attack Speed\t46 HPM</string>
    <string name="damage_10">Damage\t10</string>
    <string name="lygu">=</string>
    <string name="throw_no">Throw\tNo</string>
    <string name="damage_12">Damage\t12</string>
    <string name="attack_speed_400_hpm">Attack Speed\t400 HPM</string>
    <string name="damage_15">Damage\t15</string>
    <string name="attack_speed_48_hpm">Attack Speed\t48 HPM</string>
    <string name="damage_5">Damage\t5</string>
    <string name="range_2_m">Range\t2 m</string>
    <string name="_1">1</string>
    <string name="_19">19</string>
    <string name="_8">8</string>
    <string name="_46">46</string>
    <string name="_15">15</string>
    <string name="_799">799</string>
    <string name="_10">10</string>
    <string name="string_10" />
    <string name="_400">400</string>
    <string name="_63">63</string>
    <string name="_185">185</string>
    <string name="_3">3</string>
    <string name="_49">49</string>
    <string name="_23">23</string>
    <string name="_12">12</string>
    <string name="_200">200</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="craft">Craft</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2x">2x</string>
    <string name="_150x">150x</string>
    <string name="_10x">10x</string>
    <string name="_20x">20x</string>
    <string name="_5x">5x</string>
    <string name="_1x">1x</string>
    <string name="_4x">4x</string>
    <string name="_200x">200x</string>
    <string name="_50x">50x</string>
    <string name="_3x">3x</string>
    <string name="_25x">25x</string>
    <string name="_100x">100x</string>
    <string name="_75x">75x</string>
    <string name="_8x">8x</string>
    <string name="_175x">175x</string>
    <string name="_30x">30x</string>
    <string name="_6x">6x</string>
    <string name="_15x">15x</string>
    <string name="_60x">60x</string>
    <string name="_40x">40x</string>
    <string name="_300x">300x</string>
    <string name="attack_speed_60_hpm">Attack Speed\t60 HPM</string>
    <string name="radiation_20">Radiation\t20 %</string>
    <string name="_125x">125x</string>
    <string name="upkeep">Upkeep</string>
    <string name="_30_100">30–100</string>
    <string name="todo">TODO</string>
    <string name="_5_hours">5 hours</string>
    <string name="decay">Decay</string>
    <string name="_250">250</string>
    <string name="hp">HP</string>
    <string name="_3_hours">3 hours</string>
    <string name="_20_67">20-67</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="_8_hours">8 hours</string>
    <string name="_2000">2000</string>
    <string name="_3_8">3–8</string>
    <string name="_12_hours">12 hours</string>
    <string name="_15_50">15–50</string>
    <string name="_800">800</string>
    <string name="_2_7">2-7</string>


</resources>