<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151d1c"
    tools:context=".BoltActionRifleFragment">

    <TextView
        android:id="@+id/textView100"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="352dp"
        android:gravity="center"
        android:text="@string/_3x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView101"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView99"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="352dp"
        android:gravity="center"
        android:text="@string/_4x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView100"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img"
        android:src="@drawable/metalspring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView101" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/img"
        android:src="@drawable/metalpipe"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView100"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView99"
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginTop="352dp"
        android:gravity="center"
        android:text="@string/_1x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView100"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView98"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView98"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="352dp"
        android:gravity="center"
        android:text="@string/_20x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView99"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/img"
        android:src="@drawable/metal_refined"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView98"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/img"
        android:src="@drawable/riflebody"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView99"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView97"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/lygu"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/image_satchel1"
        app:layout_constraintStart_toStartOf="@+id/image_satchel1"
        app:layout_constraintTop_toBottomOf="@+id/image_satchel1" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/craft"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_satchel1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:background="#80BD3200"
        android:contentDescription="@string/img"
        android:src="@drawable/bolt_action_rifle_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0" />

</androidx.constraintlayout.widget.ConstraintLayout>