<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151d1c"
    tools:context=".CrossbowFragment">

    <TextView
        android:id="@+id/textView97"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/lygu"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/image_satchel1"
        app:layout_constraintStart_toStartOf="@+id/image_satchel1"
        app:layout_constraintTop_toBottomOf="@+id/image_satchel1" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/craft"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_satchel1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:background="#80738D45"
        android:contentDescription="@string/img"
        android:src="@drawable/crossbow_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/img"
        android:src="@drawable/wood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/textView96"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/img"
        android:src="@drawable/metal_fragments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView94"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/img"
        android:src="@drawable/rope"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/textView95"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView94"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="340dp"
        android:gravity="center"
        android:text="@string/_75x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView95"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView95"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/_2x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView96"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView94"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView96"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/_200x"
        android:textAlignment="center"
        android:textColor="#6ea354"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView95"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>